Fixed carousel margins on mobile

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -167,14 +167,14 @@ body {
 	}
 	#main-carousel {
 	    max-width: 400px;
-	    max-height: 200px;
+
 	    margin: 0 auto;
 	}
 
 	#main-carousel img {
 	    min-width: 100%;
 	    min-height: 100%;
-	    max-height: 200px;
+
 	}
 	.carousel-caption {
 		font-size: 80%;
